# SG-Point-Of-Sale

./: .env  .env.example  .gitignore  1_seeding_data_before_launching_app.md  2_alembic_error_resolution.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Code Change Regression Analysis Report.md  Code Change Review (v1.2).md  Code Change Review (v1.4).md  Code Change Review (v1.5).md  Code Change Review (v1.6).md  Code Review Report (v0.5).md  Code Review Report (v0.9).md  Code Review Report (v1.0).md  Comprehensive Project Assessment.md  Comprehensive Project Understanding.md  Deployment Guide.md  Execution Plan - Completion Report.md  Execution Plan.md  Product Requirements Document (PRD).md  Project Architecture Document (PAD).md  Project Architecture Document (initial).md  Project Architecture Document (v1.0).md  Project Architecture Document (v1.2).md  Project Architecture Document (v1.5).md  Project Architecture Document (v1.6).md  Project Management Document (PMD).md  README (v1.0).md  README (v1.2).md  README (v1.4).md  README (v1.5).md  README.md  Sales_Summary_Report_20250620.csv  Sales_Summary_Report_20250621.csv  alembic.ini  codebase_stage-1.md  codebase_stage-2.md  codebase_stage-3.md  codebase_stage-4.md  (+45 more)
app/: main.py
app/business_logic/dto/: company_dto.py  customer_dto.py  inventory_dto.py  payment_dto.py  product_dto.py  reporting_dto.py  sales_dto.py  user_dto.py
app/business_logic/managers/: base_manager.py  company_manager.py  customer_manager.py  gst_manager.py  inventory_manager.py  payment_manager.py  product_manager.py  reporting_manager.py  sales_manager.py  user_manager.py
app/core/: application_core.py  async_bridge.py  config.py  exceptions.py  result.py
app/models/: __init__.py  accounting.py  audit_log.py  base.py  company.py  customer.py  inventory.py  product.py  sales.py  user.py
app/services/: base_service.py  company_service.py  customer_service.py  inventory_service.py  payment_service.py  product_service.py  purchase_order_service.py  report_service.py  sales_service.py  supplier_service.py  user_service.py
app/ui/: main_window.py  main_window.py-diag
app/ui/dialogs/: customer_dialog.py  payment_dialog.py  payment_method_dialog.py  product_dialog.py  purchase_order_dialog.py  receive_po_dialog.py  stock_adjustment_dialog.py  user_dialog.py
app/ui/views/: customer_view.py  dashboard_view.py  inventory_view.py  payment_method_view.py  pos_view.py  product_view.py  settings_view.py
app/ui/widgets/: kpi_widget.py  managed_table_view.py  searchable_table_view.py
docs/: AI_persona.md  AI_response.md  AI_response_2.md  AI_response_3.md  AI_response_4.md  AI_response_5.md  README_v1.1.md  System_Prompt.md  prompt_to_create.md  prompt_to_fix_1.md  prompt_to_fix_2.md  prompt_to_fix_3.md  prompt_to_fix_4.md  prompts.md  recent_database_changes.md  stage-3.md  stage-5.md
gemini/: response-1.md  response-10.md  response-100.md  response-101.md  response-102.md  response-103.md  response-104.md  response-105.md  response-106.md  response-107.md  response-108.md  response-109.md  response-11.md  response-110.md  response-111.md  response-112.md  response-113.md  response-114.md  response-115.md  response-116.md  response-117.md  response-118.md  response-119.md  response-12.md  response-120.md  response-121.md  response-122.md  response-123.md  response-124.md  response-125.md  response-126.md  response-127.md  response-129.md  response-13.md  response-130.md  response-131.md  response-132.md  response-133.md  response-134.md  response-135.md  (+202 more)
migrations/: env.py  script.py.mako
migrations/versions/: (new_revision_id)_update_check_constraint_on_journal_entry_lines.py  1a2b3c4d5e6f_update_check_constraint_on_journal_entry_lines.py.bak  d5a6759ef2f7_initial_schema_setup.py  d5a6759ef2f7_initial_schema_setup.py-original  d5a6759ef2f7_initial_schema_setup.py.bak  d5a6759ef2f7_initial_schema_setup.py.bak2
scripts/database/: schema.sql  schema.sql.bak  seed_data.py
temp/: oo1
temp/app/business_logic/dto/: inventory_dto.py  sales_dto.py
temp/app/models/: inventory.py  sales.py
temp/app/ui/: utils.py
tests/: conftest.py  factories.py
tests/unit/business_logic/managers/: test_company_manager.py  test_customer_manager.py  test_inventory_manager.py  test_product_manager.py  test_sales_manager.py  test_user_manager.py
tests/unit/services/: __init__.py  test_product_service.py
v1.5/: project_codebase_files_set.md
